Add @DisplayName annotation to each test method